--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,10 @@
     "frontend": "file:",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-flip-move": "^3.0.4",
     "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
+    "react-transition-group": "^4.4.2",
     "redux": "^4.1.0",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
